--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -3,14 +3,12 @@
     <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" [(ngModel)]="login.username" class="form-control" placeholder="Email address" required autofocus>
+    <input type="email" [(ngModel)]="login.username" class="form-control" placeholder="Email address" name="username" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" [(ngModel)]="login.password" class="form-control" placeholder="Password" required>
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>      
+    <input type="password" [(ngModel)]="login.password" class="form-control" placeholder="Password" name="password" required>
+    <div padding text-center>
+      <p>Don't have an account yet? <a routerLink="/signup">Create one</a></p>
+    </div>       
     <div class="alert alert-danger" role="alert" *ngIf="validationMessage" >
       {{validationMessage}}
     </div>
