--- a/src/app/confirm/confirm.component.html
+++ b/src/app/confirm/confirm.component.html
@@ -5,7 +5,10 @@
 <br />
 <label for="username" class="sr-only" >User Name</label>
 <input type="text" [(ngModel)]="username" placeholder="User Name" name="username" class="form-control" />
-
+<br />
+<div class="alert alert-info" role="alert" *ngIf="logInConfirmed" >
+  <p>Your account has been confirmed! Go to the <a routerLink="/signin">Sign-in page</a></p>
+</div>
 <br />
 <button type="button" class="btn btn-sm btn-primary btn-block" (click)="confirm();">Confirm</button>  
 
