--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,19 +4,19 @@
     <h1 class="h3 mb-3 font-weight-normal">Create an Account</h1>
     <div class="row">
       <label for="username" class="sr-only" >Username</label>
-      <input type="text" class="form-control" [(ngModel)]="userDetails.username" placeholder="Username" name="username" />
+      <input type="text" class="form-control" [(ngModel)]="loginDetails.username" placeholder="Username" name="username" />
   </div>  
   
   
   <div class="row">
       <label for="email" class="sr-only">Email</label>
-      <input type="email"  class="form-control"[(ngModel)]="userDetails.email" placeholder="Email" name="email" />
+      <input type="email"  class="form-control"[(ngModel)]="loginDetails.email" placeholder="Email" name="email" />
   </div>
   
   
   <div class="row">
       <label for="password" class="sr-only">Password</label>
-      <input type="password" class="form-control" [(ngModel)]="userDetails.password" placeholder="Password" name="password" />
+      <input type="password" class="form-control" [(ngModel)]="loginDetails.password" placeholder="Password" name="password" />
   </div>  
     <div class="row"><br /></div>    
   
